[package]
name = "cobhan"
version = "0.1.0"
edition = "2018"
authors = ["Jeremiah Gowdy <jeremiah@gowdy.me>"]
description = "Cobhan FFI Rust Library"
readme = "../README.md"
repository = "https://github.com/godaddy/cobhan-rust"
license-file = "../LICENSE"
homepage = "https://github.com/godaddy/cobhan-rust"

[dependencies]
libc = "0.2.103"
serde_json = "1.0.68"
tempfile = "3.2.0"

[lib]
name = "cobhan"
crate-type = ["rlib"]

[features]
cobhan_debug = []
