[package]
name = "cobhan"
version = "0.1.1"
edition = "2018"
authors = ["Jeremiah Gowdy <jeremiah@gowdy.me>", "Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
description = "Cobhan FFI is a system for enabling shared code to be written in Rust and consumed from all major languages/platforms in a safe and effective way, using easy helper functions to manage any unsafe data marshaling."
readme = "../README.md"
repository = "https://github.com/godaddy/cobhan-rust"
license-file = "../LICENSE"
homepage = "https://github.com/godaddy/cobhan-rust"

[dependencies]
libc = "0.2.103"
serde_json = "1.0.68"
tempfile = "3.2.0"

[lib]
name = "cobhan"
crate-type = ["rlib"]

[features]
cobhan_debug = []
